fix: broken link

--- a/prog.html
+++ b/prog.html
@@ -11,7 +11,7 @@
     <main class="container">
       <h2>Introducción a la Programación</h2>
       <section id="course-space">
-        <a id="back" href="/">← Regresar</a>
+        <a id="back" href="/cursos-club">← Regresar</a>
       </section>
       <div id="course-content">
         <section>
