--- a/linux.html
+++ b/linux.html
@@ -10,7 +10,7 @@
     <main class="container">
       <h2>Introducción a Linux</h2>
       <section id="course-space">
-        <a id="back" href="/">← Regresar</a>
+        <a id="back" href="/cursos-club">← Regresar</a>
       </section>
       <div id="course-content">
         <section>
