--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1>Cursos</h1>
       <section id="courses">
         <a href="prog.html">
-          <h3>Introducción a Go</h3>
+          <h3>Introducción a Programación</h3>
           <p>Aprende las bases de Programación: Web, Git, Go</p>
           <div>Ver Curso →</div>
         </a>
