feat: Linux syllabus

--- a/linux.html
+++ b/linux.html
@@ -13,23 +13,154 @@
         <a id="back" href="/cursos-club">← Regresar</a>
       </section>
       <div id="course-content">
+        <p>
+          <strong>Requisitos previos:</strong> No se requieren conocimientos
+          previos de Linux.
+        </p>
         <section>
-          <h3>¿Qué aprenderás?</h3>
-          todo
-          <h3>Distribuciones</h3>
-          todo
-
-          <h3>Herramientas que dominarás</h3>
+          <h3>Módulo 1: ¡WTF CON LINUX!</h3>
           <ul>
-            <li>Terminal y comandos esenciales (ls, cd, cp, mv, rm)</li>
-            <li>Gestión de archivos y directorios</li>
-            <li>todo</li>
+            <li>
+              <strong>¡Bienvenidos al Mundo Linux!</strong> El Superpoder de los
+              Profesionales
+              <ul>
+                <li>Análisis de Datos</li>
+                <li>IDE's</li>
+                <li>Privacidad</li>
+                <li>Control Total</li>
+                <li>Terminal</li>
+                <li>
+                  Explicación general de Distros oficiales e historia general de
+                  Linux
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Tu Primer Laboratorio:</strong> Instalando Linux de Forma
+              Segura (VirtualBox)
+              <ul>
+                <li>Descarga Xubuntu 22.04</li>
+                <li>Configuración de VirtualBox</li>
+                <li>Instalación de Xubuntu</li>
+                <li>Primeros pasos en Xubuntu</li>
+                <li>Instalación de Python en Xubuntu</li>
+              </ul>
+            </li>
           </ul>
 
-          <p>
-            <strong>Requisitos previos:</strong> No se requieren conocimientos
-            previos de Linux.
-          </p>
+          <h3>Módulo 2: Sobreviviendo y Prosperando en el Escritorio</h3>
+          <ul>
+            <li>
+              <strong>Escritorio, Archivos y No Morir en el Intento</strong>
+              <ul>
+                <li>Presentación de gestor de archivos Thunar</li>
+                <li>Revisión de archivos en Linux</li>
+                <li>Apertura de archivos en Thunar</li>
+                <li>Inicio de terminal</li>
+                <li>Introducción de terminal</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Instalación de Software</strong>
+              <ul>
+                <li>Presentación de tienda de software</li>
+                <li>Explicación repositorios de apps</li>
+                <li>Repositorios GitHub</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Configuración de Aspecto</strong> Fondo, tema, cursores
+            </li>
+          </ul>
+
+          <h3>Módulo 3: Terminal: La Magia de Linux</h3>
+          <ul>
+            <li>
+              <strong>La Terminal No Muerde:</strong> Deja de Hacer Clics
+              <ul>
+                <li>
+                  <code>ls</code>, <code>cd</code>, <code>pwd</code>,
+                  <code>cp</code>, <code>mv</code>, <code>rm</code>,
+                  <code>mkdir</code>
+                </li>
+                <li><code>find</code></li>
+                <li><code>wc</code></li>
+              </ul>
+            </li>
+            <li>
+              <strong>Tu Sistema por Dentro:</strong> Uso de Recursos (CPU,
+              Memoria, Discos)
+              <ul>
+                <li><code>htop</code>, <code>df</code>, <code>free</code></li>
+                <li><code>sudo</code> → <code>sudo su</code></li>
+                <li><code>chmod</code></li>
+                <li><code>chown</code></li>
+              </ul>
+            </li>
+            <li>
+              <strong>Manejo de Archivos y Directorios:</strong> Expansiones y
+              Atajos
+              <ul>
+                <li>Wildcards (<code>*</code>, <code>?</code>)</li>
+                <li>Redirección (<code>></code>, <code>|</code>)</li>
+                <li>
+                  "Cómo convertir 100 imágenes .jpg a .png con una sola línea"
+                </li>
+              </ul>
+            </li>
+          </ul>
+
+          <h3>Módulo 4: Creando, Ejecutando, Diseñando</h3>
+          <ul>
+            <li>
+              <strong>Introducción a Scripts</strong>
+              <ul>
+                <li>Creación y ejecución de scripts</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Bash Scripting</strong>
+              <ul>
+                <li><code>for</code></li>
+                <li><code>grep</code></li>
+                <li><code>awk</code></li>
+                <li><code>sed</code></li>
+                <li>Bash + Python</li>
+                <li><code>wget</code></li>
+              </ul>
+            </li>
+            <li>
+              <strong>Conda</strong>
+              <ul>
+                <li>Jupyter from bash</li>
+                <li>Pandas</li>
+                <li>Numpy (<code>pip install</code>)</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Git</strong>
+              <ul>
+                <li><code>git clone</code></li>
+                <li><code>git status</code></li>
+                <li><code>git branch</code></li>
+                <li><code>git checkout</code></li>
+                <li><code>git push</code>/<code>git pull</code></li>
+                <li><code>git init</code></li>
+                <li><code>git add</code></li>
+                <li><code>git commit</code></li>
+              </ul>
+            </li>
+          </ul>
+
+          <h3>Módulo 5: Introducción a Linux-Intermedio</h3>
+          <ul>
+            <li>
+              <strong>Mundo Remoto:</strong> Conexión a servidores, SSH, SCP
+            </li>
+            <li>
+              <strong>Bash Scripting Avanzado:</strong> Condicionales y Loops
+            </li>
+          </ul>
         </section>
       </div>
     </main>
