feat: summary title

--- a/prog.html
+++ b/prog.html
@@ -13,48 +13,104 @@
         <a id="back" href="/cursos-club">← Regresar</a>
       </section>
       <div id="course-content">
+        <p>
+          <strong>Requisitos previos:</strong> No se requieren conocimientos
+          previos de programación.
+        </p>
+        <h3>Calendario del Curso</h3>
+        <div class="schedule-table">
+          <div class="schedule-header">
+            <div class="schedule-cell header">Módulo</div>
+            <div class="schedule-cell header">Fecha</div>
+            <div class="schedule-cell header">Salón</div>
+          </div>
+
+          <div class="schedule-row">
+            <div class="schedule-cell module">Fundamentos de Programación</div>
+            <div class="schedule-cell date">Por Definir</div>
+            <div class="schedule-cell room">Por Definir</div>
+          </div>
+
+          <div class="schedule-row">
+            <div class="schedule-cell module">¿Qué es la Programación?</div>
+            <div class="schedule-cell date">Por Definir</div>
+            <div class="schedule-cell room">Por Definir</div>
+          </div>
+
+          <div class="schedule-row">
+            <div class="schedule-cell module">Editores de Texto</div>
+            <div class="schedule-cell date">Por Definir</div>
+            <div class="schedule-cell room">Por Definir</div>
+          </div>
+
+          <div class="schedule-row">
+            <div class="schedule-cell module">Introducción a Go</div>
+            <div class="schedule-cell date">Por Definir</div>
+            <div class="schedule-cell room">Por Definir</div>
+          </div>
+
+          <div class="schedule-row">
+            <div class="schedule-cell module">Control de Versiones con Git</div>
+            <div class="schedule-cell date">Por Definir</div>
+            <div class="schedule-cell room">Por Definir</div>
+          </div>
+
+          <div class="schedule-row">
+            <div class="schedule-cell module">
+              Desarrollo Web: HTML, CSS, JS
+            </div>
+            <div class="schedule-cell date">Por Definir</div>
+            <div class="schedule-cell room">Por Definir</div>
+          </div>
+        </div>
+
         <section>
-          <h3>¿Qué aprenderás?</h3>
-          <ul>
-            <li><strong>Fundamentos de Programación</strong></li>
-            <li><strong>¿Qué es la Programación?</strong></li>
-            <li>
-              <strong>Editores de Texto</strong>: Visual Studio Code y Vim
-            </li>
-            <li>
-              <strong>Introducción a Go</strong>: Variables, tipos de datos,
-              estructuras de control y funciones
-            </li>
-            <li>
-              <strong>Control de Versiones con Git</strong>: Ctrl+s para
-              desarrolladores
-            </li>
-            <li>
-              <strong>Desarrollo Web: HTML, CSS, y JS</strong>: Lo basico para
-              crear páginas web
-            </li>
-          </ul>
+          <h3>Módulo 1: ¿Qué es la Programación?</h3>
+          <details>
+            <summary>Ver detalles</summary>
+            <ul>
+              <li><strong>Fundamentos de Programación</strong></li>
+              <li><strong>¿Qué es la Programación?</strong></li>
+              <li>
+                <strong>Editores de Texto</strong>: Visual Studio Code y Vim
+              </li>
+              <li>
+                <strong>Introducción a Go</strong>: Variables, tipos de datos,
+                estructuras de control y funciones
+              </li>
+              <li>
+                <strong>Control de Versiones con Git</strong>: Ctrl+s para
+                desarrolladores
+              </li>
+              <li>
+                <strong>Desarrollo Web: HTML, CSS, y JS</strong>: Lo básico para
+                crear páginas web
+              </li>
+            </ul>
+          </details>
 
           <h3>Herramientas que usarás</h3>
-          <ul>
-            <li>
-              <strong>Go:</strong> Lenguaje de programación moderno y eficiente
-            </li>
-            <li><strong>Git:</strong> Sistema de control de versiones</li>
-            <li><strong>VS Code:</strong> Editor de código versátil</li>
-            <li><strong>Terminal:</strong> Interfaz de línea de comandos</li>
-          </ul>
+          <details>
+            <summary>Ver herramientas</summary>
+            <ul>
+              <li>
+                <strong>Go:</strong> Lenguaje de programación moderno y
+                eficiente
+              </li>
+              <li><strong>Git:</strong> Sistema de control de versiones</li>
+              <li><strong>VS Code:</strong> Editor de código versátil</li>
+              <li><strong>Terminal:</strong> Interfaz de línea de comandos</li>
+            </ul>
+          </details>
 
           <h3>Proyectos prácticos</h3>
-          <ul>
-            <li>Calculadora simple en Go</li>
-            <li>Página web personal</li>
-          </ul>
-
-          <p>
-            <strong>Requisitos previos:</strong> No se requieren conocimientos
-            previos de programación.
-          </p>
+          <details>
+            <summary>Ver proyectos</summary>
+            <ul>
+              <li>Calculadora simple en Go</li>
+              <li>Página web personal</li>
+            </ul>
+          </details>
         </section>
       </div>
     </main>
