feat: Programming syllabus

--- a/prog.html
+++ b/prog.html
@@ -65,50 +65,157 @@
         </div>
 
         <section>
-          <h3>Módulo 1: ¿Qué es la Programación?</h3>
           <details>
-            <summary>Ver detalles</summary>
+            <summary class="module-details">
+              Módulo 1: Fundamentos de Programación
+            </summary>
             <ul>
-              <li><strong>Fundamentos de Programación</strong></li>
-              <li><strong>¿Qué es la Programación?</strong></li>
               <li>
-                <strong>Editores de Texto</strong>: Visual Studio Code y Vim
+                <strong>Introducción a la Lógica de Programación</strong>
+                <ul>
+                  <li>¿Qué es un algoritmo?</li>
+                  <li>Resolución de problemas</li>
+                  <li>Pensamiento computacional</li>
+                  <li>Variables y tipos de datos</li>
+                </ul>
               </li>
               <li>
-                <strong>Introducción a Go</strong>: Variables, tipos de datos,
-                estructuras de control y funciones
-              </li>
-              <li>
-                <strong>Control de Versiones con Git</strong>: Ctrl+s para
-                desarrolladores
-              </li>
-              <li>
-                <strong>Desarrollo Web: HTML, CSS, y JS</strong>: Lo básico para
-                crear páginas web
+                <strong>Conceptos Básicos de Programación</strong>
+                <ul>
+                  <li>Estructuras de control (if, else, loops)</li>
+                  <li>Funciones</li>
+                </ul>
               </li>
             </ul>
           </details>
 
-          <h3>Herramientas que usarás</h3>
           <details>
-            <summary>Ver herramientas</summary>
+            <summary class="module-details">
+              Módulo 2: ¿Qué es la Programación?
+            </summary>
             <ul>
               <li>
-                <strong>Go:</strong> Lenguaje de programación moderno y
-                eficiente
+                <strong>Historia y Evolución</strong>
+                <ul>
+                  <li>Lenguajes de programación más populares</li>
+                  <li>Paradigmas de programación</li>
+                </ul>
               </li>
-              <li><strong>Git:</strong> Sistema de control de versiones</li>
-              <li><strong>VS Code:</strong> Editor de código versátil</li>
-              <li><strong>Terminal:</strong> Interfaz de línea de comandos</li>
+              <li>
+                <strong>Aplicaciones en el Mundo Real</strong>
+                <ul>
+                  <li>Desarrollo web y móvil</li>
+                  <li>Inteligencia artificial y machine learning</li>
+                  <li>Videojuegos y entretenimiento</li>
+                  <li>Automatización y robótica</li>
+                  <li>Ciencia de datos y análisis</li>
+                </ul>
+              </li>
             </ul>
           </details>
 
-          <h3>Proyectos prácticos</h3>
           <details>
-            <summary>Ver proyectos</summary>
+            <summary class="module-details">
+              Módulo 3: Editores de Texto
+            </summary>
             <ul>
-              <li>Calculadora simple en Go</li>
-              <li>Página web personal</li>
+              <li>
+                <strong>Visual Studio Code</strong>
+                <ul>
+                  <li>Instalación y configuración</li>
+                  <li>Extensiones</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Vim (Editor de Terminal)</strong>
+                <ul>
+                  <li>Modos de operación básicos (normal, insert, visual)</li>
+                  <li>Comandos básicos de navegación</li>
+                  <li>Búsqueda y reemplazo</li>
+                </ul>
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary class="module-details">
+              Módulo 4: Control de Versiones con Git
+            </summary>
+            <ul>
+              <li>
+                <strong>Conceptos Básicos de Git</strong>
+                <ul>
+                  <li>¿Qué es un controlador de versiones?</li>
+                  <li>Repositorios locales y remotos</li>
+                  <li>Commits y el historial de cambios</li>
+                  <li>Branches</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Flujo de Trabajo con Git</strong>
+                <ul>
+                  <li>GitHub y repositorios remotos</li>
+                  <li>Git flow y estrategias de branching</li>
+                  <li>Git en equipos de desarrollo</li>
+                </ul>
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary class="module-details">
+              Módulo 5: Introducción a Go
+            </summary>
+            <ul>
+              <li>
+                <strong>Fundamentos del Lenguaje</strong>
+                <ul>
+                  <li>Instalación y configuración</li>
+                  <li>Estructura de un programa en Go</li>
+                  <li>Variables, constantes y tipos de datos</li>
+                  <li>Operadores y expresiones</li>
+                  <li>Control de flujo (if, switch, loops)</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Funciones y Estructuras</strong>
+                <ul>
+                  <li>Declaración y llamada de funciones</li>
+                  <li>Parámetros y valores de retorno</li>
+                </ul>
+              </li>
+            </ul>
+          </details>
+
+          <details>
+            <summary class="module-details">
+              Módulo 6: Desarrollo Web: HTML, CSS, JS
+            </summary>
+            <ul>
+              <li>
+                <strong>HTML5 - Estructura</strong>
+                <ul>
+                  <li>Elementos</li>
+                  <li>Formularios</li>
+                  <li>Multimedia</li>
+                  <li>Accesibilidad web</li>
+                </ul>
+              </li>
+              <li>
+                <strong>CSS - Estilo y Diseño</strong>
+                <ul>
+                  <li>Propiedades</li>
+                  <li>Selectores</li>
+                  <li><code>style</code> y style.css</li>
+                </ul>
+              </li>
+              <li>
+                <strong>JavaScript - Interactividad</strong>
+                <ul>
+                  <li>Breve introducción al lenguaje</li>
+                  <li>Manipulacion del DOM</li>
+                </ul>
+              </li>
             </ul>
           </details>
         </section>
