fix: salón faltante

--- a/linux.html
+++ b/linux.html
@@ -28,7 +28,7 @@
           <div class="schedule-row">
             <div class="schedule-cell module">Módulo 1: ¡WTF CON LINUX!</div>
             <div class="schedule-cell date">Por Definir</div>
-            <div class="schedule-cell room">Por Definir</div>
+            <div class="schedule-cell room">LC 4</div>
           </div>
 
           <div class="schedule-row">
@@ -36,7 +36,7 @@
               Módulo 2: Sobreviviendo y Prosperando en el Escritorio
             </div>
             <div class="schedule-cell date">Por Definir</div>
-            <div class="schedule-cell room">Por Definir</div>
+            <div class="schedule-cell room">LC 4</div>
           </div>
 
           <div class="schedule-row">
@@ -44,7 +44,7 @@
               Módulo 3: Terminal: La Magia de Linux
             </div>
             <div class="schedule-cell date">Por Definir</div>
-            <div class="schedule-cell room">Por Definir</div>
+            <div class="schedule-cell room">LC 4</div>
           </div>
 
           <div class="schedule-row">
@@ -52,7 +52,7 @@
               Módulo 4: Creando, Ejecutando, Diseñando
             </div>
             <div class="schedule-cell date">Por Definir</div>
-            <div class="schedule-cell room">Por Definir</div>
+            <div class="schedule-cell room">LC 4</div>
           </div>
 
           <div class="schedule-row">
@@ -60,7 +60,7 @@
               Módulo 5: Introducción a Linux-Intermedio
             </div>
             <div class="schedule-cell date">Por Definir</div>
-            <div class="schedule-cell room">Por Definir</div>
+            <div class="schedule-cell room">LC 4</div>
           </div>
         </div>
 
@@ -98,7 +98,9 @@
           </details>
 
           <details>
-            <summary class="module-details">Módulo 2: Sobreviviendo y Prosperando en el Escritorio</summary>
+            <summary class="module-details">
+              Módulo 2: Sobreviviendo y Prosperando en el Escritorio
+            </summary>
             <ul>
               <li>
                 <strong>Escritorio, Archivos y No Morir en el Intento</strong>
@@ -125,7 +127,9 @@
           </details>
 
           <details>
-            <summary class="module-details">Módulo 3: Terminal: La Magia de Linux</summary>
+            <summary class="module-details">
+              Módulo 3: Terminal: La Magia de Linux
+            </summary>
             <ul>
               <li>
                 <strong>La Terminal No Muerde:</strong> Deja de Hacer Clics
@@ -164,7 +168,9 @@
           </details>
 
           <details>
-            <summary class="module-details">Módulo 4: Creando, Ejecutando, Diseñando</summary>
+            <summary class="module-details">
+              Módulo 4: Creando, Ejecutando, Diseñando
+            </summary>
             <ul>
               <li>
                 <strong>Introducción a Scripts</strong>
@@ -208,7 +214,9 @@
           </details>
 
           <details>
-            <summary class="module-details">Módulo 5: Introducción a Linux-Intermedio</summary>
+            <summary class="module-details">
+              Módulo 5: Introducción a Linux-Intermedio
+            </summary>
             <ul>
               <li>
                 <strong>Mundo Remoto:</strong> Conexión a servidores, SSH, SCP
