--- a/robotica.html
+++ b/robotica.html
@@ -52,7 +52,10 @@
         <h2 class="module-details">Información de Registro</h2>
         <p><strong>Proceso de Inscripción</strong></p>
         <ul>
-          <li>Envíar email a clubprog@uach.mx</li>
+          <li>
+            Envíar email a
+            <a href="mailto:clubprog@uach.mx">clubprog@uach.mx</a>
+          </li>
           <li>
             Incluye: nombre, edad, nivel de experiencia (Python básico,
             intermedio, conocimiento de IoT, etc.)
