chore: añadir información faltante

--- a/robotica.html
+++ b/robotica.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <main class="container">
-      <h2>Concurso de Robótica</h2>
+      <h2>Concurso de Robótica IoT + IA</h2>
       <section id="course-space">
         <a id="back" href="/cursos-club">← Regresar</a>
       </section>
       <div id="course-content">
         <p>
           <strong>Requisitos previos:</strong> Ninguno, pero conocimientos sobre
-          Python y uso de Arduino / dispositivos IoT son un plus.
+          Python, uso de Arduino / dispositivos IoT e IA son un plus.
         </p>
         <h3>Calendario del Concurso</h3>
         <div class="schedule-table">
@@ -58,7 +58,7 @@
           </li>
           <li>
             Incluye: nombre, edad, nivel de experiencia (Python básico,
-            intermedio, conocimiento de IoT, etc.)
+            intermedio, conocimiento de IoT, modelos de IA, etc.)
           </li>
           <li>*Nota: Se proporciona el equipo necesario para la práctica.</li>
         </ul>
